--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -15,5 +15,7 @@ header {
     margin-right: 2%;
     cursor: pointer;
     padding: 0.3% 0;
+    background-color: white;
+    border: 1px solid black;
   }
 }
