--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -20,12 +20,14 @@ main {
   min-height: 90vh;
   background-color: #ccebff;
 }
+
 .main-headings {
   flex-grow: 1;
   font-weight: 400;
   font-size: 1.8vw;
   text-align: center;
 }
+
 .no-decor {
   text-decoration: none;
   color: inherit;
@@ -33,5 +35,13 @@ main {
 
 .err-msg {
   color: red;
+}
+
+.succ-msg {
+  color: green;
+}
+
+.err-msg,
+.succ-msg {
   margin: 5% 0;
 }
