--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,9 +1,8 @@
 header {
-  background-color: var(--main-color);
+  background-color: var(--main-color-1);
   min-height: 10vh;
   display: flex;
   align-items: center;
-  box-shadow: 0px 3px 10px gray;
   position: relative;
 
   #logo {
