--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -17,6 +17,6 @@ header {
     cursor: pointer;
     padding: 0.3% 0;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid var(--main-color-3);
   }
 }
