--- a/src/components/VisitInputs/visitInputs.scss
+++ b/src/components/VisitInputs/visitInputs.scss
@@ -1,7 +1,8 @@
 #visitInputs {
-  background-color: var(--main-color);
+  background-color: var(--main-color-1);
   padding: 2% 1%;
   display: flex;
+  margin-bottom: 5%;
 
   .visitInputs-inp-wrapper {
     height: 100%;
@@ -11,7 +12,7 @@
     #add-button {
       background-color: white;
       padding: 0 3%;
-      border: 1px solid black;
+      border: 1px solid var(--main-color-3);
       cursor: pointer;
       width: 95%;
       padding: 2.5% 0.5%;
@@ -22,7 +23,7 @@
       width: 100%;
       height: 100%;
       border: 0.1% solid black;
-      outline: 0.1% solid black;
+      outline: 0.1% solid var(--main-color-3);
       padding: 2.5% 0.5%;
     }
   }
