--- a/src/components/Visits/visits.scss
+++ b/src/components/Visits/visits.scss
@@ -3,13 +3,14 @@
   margin: auto;
   margin-top: 4%;
   text-align: center;
-  border-bottom: 1px solid black;
-
+  border: 1px solid black;
   tbody {
     background-color: white;
+    border-bottom: 1px solid black;
   }
 
   td {
+    border-bottom: none;
     border-left: 1px solid black;
   }
 
