code-style refactoring

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,5 +1,5 @@
 header {
-  background-color: var(--main-color-1);
+  background-color: var(--header-color);
   min-height: 10vh;
   display: flex;
   align-items: center;
