--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -9,9 +9,9 @@ body * {
 }
 
 :root {
-  --main-color-1: #c5e9ff;
-  --main-color-2: #cee8f8;
-  --main-color-3: #c4c4c4;
+  --header-color: #c5e9ff;
+  --main-body-color: #cee8f8;
+  --inputs-color: #c4c4c4;
 }
 
 .resp-img {
@@ -21,7 +21,7 @@ body * {
 
 main {
   min-height: 90vh;
-  background-color: #ccebff;
+  background-color: var(--main-body-color);
 }
 
 .main-headings {
