--- a/src/components/VisitInputs/visitInputs.scss
+++ b/src/components/VisitInputs/visitInputs.scss
@@ -1,5 +1,4 @@
 #visitInputs {
-  background-color: var(--main-color-1);
   padding: 2% 1%;
   display: flex;
   margin-bottom: 5%;
@@ -8,11 +7,12 @@
     height: 100%;
     width: 33%;
     margin: 0 1%;
+    box-shadow: 0 10 var(--inputs-color);
 
     #add-button {
       background-color: white;
       padding: 0 3%;
-      border: 1px solid var(--main-color-3);
+      border: 1px solid var(--inputs-color);
       cursor: pointer;
       width: 95%;
       padding: 2.5% 0.5%;
@@ -23,7 +23,7 @@
       width: 100%;
       height: 100%;
       border: 0.1% solid black;
-      outline: 0.1% solid var(--main-color-3);
+      outline: 0.1% solid var(--inputs-color);
       padding: 2.5% 0.5%;
     }
   }
