delete with confirmation

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -20,8 +20,9 @@ body * {
 }
 
 main {
-  min-height: 90vh;
+  min-height: 100vh;
   background-color: var(--main-body-color);
+  padding: 25px;
 }
 
 .main-headings {
