--- a/src/components/FilterSort/filterSort.css
+++ b/src/components/FilterSort/filterSort.css
@@ -6,8 +6,8 @@
 }
 
 #filterSort {
-  padding: 2% 2%;
-  display: flex;
+  padding: 2%;
+  display: inline-flex;
   margin-bottom: 5%;
   justify-content: flex-end;
 }
